# mulle-core-developer

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  Dockerfile  LICENSE  README.md  RELEASENOTES.md  install.sh  installer  mulle-c-developer.sublime-project  mulle-c-sourcetree-update
.mulle/etc/project/: formula-info.sh  version-info.sh
dox/: Makefile  mulle-c-developer.dot  mulle-sde-c-developer.dot
mulle-project/: formula-info.sh  generate-formula.sh  version-info.sh
src/extensions/cmake/: dependencies
src/extensions/cmake/project/executable/: CMakeLists.txt
src/extensions/cmake/share/cmake/: FinalOutput.cmake  PostExecutable.cmake  PostFiles.cmake  PostLibrary.cmake  PreExecutable.cmake  PreFiles.cmake  PreLibrary.cmake  UnwantedWarnings.cmake
src/extensions/cmake_c/: dependency
src/extensions/cmake_c/project/executable/: CMakeLists.txt
src/extensions/cmake_c/share/cmake/: CMakeTweaks.cmake  CompilerDetection.cmake  FinalOutput.cmake  PostExecutable.cmake  PostLibrary.cmake  PreExecutable.cmake  PreFiles.cmake  PreLibrary.cmake  README.md
src/extensions/mulle-c/c/: init
src/extensions/mulle-c/cmake/: usage
src/extensions/mulle-c/cmake-c/: inherit
src/extensions/mulle-c/cmake/share/cmake/: CMakeTweaks.cmake  PostFiles.cmake  PostLibrary.cmake
src/mulle-c/c/: dependency  inherit
src/mulle-c/c-cmake/: inherit  usage
src/mulle-c/c-cmake/clobber/all/cmake/share/: LinkManifestC.cmake  PreFiles.cmake  StandaloneC.cmake  StartupC.cmake
src/mulle-c/c-cmake/project/all/cmake/share/: CMakeTweaksC.cmake  CompilerDetectionC.cmake  CompilerFlagsC.cmake  Executable.cmake  Library.cmake  LinkManifestC.cmake  PostLibrary.cmake  PostSharedLibrary.cmake  PreInstall.cmake  StandaloneC.cmake  StartupC.cmake
src/mulle-c/c-developer/: inherit
src/mulle-c/cmake/: inherit
src/mulle-c/cmake/clobber/all/cmake/share/: AllLoad.cmake  CMakeTweaks.cmake  CMakeTweaksC.cmake  CompilerDetection.cmake  CompilerDetectionC.cmake  CompilerFlags.cmake  CompilerFlagsC.cmake  LinkManifest.cmake  LinkManifestC.cmake  PostFiles.cmake  PostLibrary.cmake  PreFiles.cmake  Standalone.cmake
src/mulle-c/cmake/project/executable/: CMakeLists.txt
src/mulle-c/cmake/share/cmake/: CompilerFlags.cmake  PostExecutable.cmake  PreExecutable.cmake  PreFiles.cmake  PreLibrary.cmake  UnwantedWarnings.cmake
src/mulle-c/travis/project/all/: .travis.yml
src/mulle-core/c/: dependency
src/mulle-core/c-developer/: inherit
tests/: run-test
tests/01-sourcetree/: run-test
tests/01-sourcetree/.mulle-sourcetree/etc/: config
tests/01-sourcetree/src/: dependencies.h
